Closed
Bug 47464
Opened 26 years ago
Closed 25 years ago
getURLForIndex method in History interface do not work
Categories
(Core Graveyard :: Java APIs to WebShell, defect, P3)
Core Graveyard
Java APIs to WebShell
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: sva, Assigned: edburns)
Details
Attachments
(1 file)
|
5.54 KB,
patch
|
Details | Diff | Splinter Review |
getURLForIndex with correct parameter thrown a raptorWebShellGetURL exception
and do nothing.
How to reproduce:
Load 4 pages and try to call method getURLForIndex with correct index (0,1,2,3)
and note that exception raptorWebShellGetURL thrown.
Suggested reason:
Typematch in file /mozilla/java/webclient/src_moz/HistoryImpl.cpp:305
wsGetURLForIndexEvent * actionEvent =
new wsGetURLForIndexEvent(initContext->sHistory,
historyIndex);
If change initContext->sHistory to sHistory in this line, then it will works
correctly.
Reproduced on Mozilla M16 and Webclient sources from 07.31.2000
Comment 1•26 years ago
|
||
Confirming due to high quality. edburns@acm.org is the man for this file.
Gerv
Status: UNCONFIRMED → NEW
Ever confirmed: true
Vladimir's fix does work. I'll attach a patch for review.
Ed
This fix removes gHistory, and makes it so History.getURLForIndex()
works, thanks to sva@sparc.spb.su (Vladimir Strigun).
M HistoryImpl.cpp
M NativeEventThread.cpp
M WindowControlActionEvents.cpp
M WindowControlImpl.cpp
M WrapperFactoryImpl.cpp
M ns_util.h
HistoryImpl.cpp NativeEventThread.cpp WindowControlActionEvents.cpp
WindowControlImpl.cpp WrapperFactoryImpl.cpp ns_util.h
Comment 6•25 years ago
|
||
r = ashuk
looks good.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•25 years ago
|
||
Mark this bug as verified.
Verifid with Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:0.9.1) Gecko/20010910
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•