bug 47464 a=edburns r=ashuk

This fix removes gHistory, and makes it so History.getURLForIndex()
works, thanks to sva@sparc.spb.su (Vladimir Strigun).

M HistoryImpl.cpp
M NativeEventThread.cpp
M WindowControlActionEvents.cpp
M WindowControlImpl.cpp
M WrapperFactoryImpl.cpp
M ns_util.h