mozilla/java/webclient/src_moz/WrapperFactoryImpl.cpp
@@ -71,7 +71,6 @@ Java_org_mozilla_webclient_wrapper_1native_WrapperFactoryImpl_nativeTerminate
 (JNIEnv *env, jobject obj)
 {
     gComponentManager = nsnull;
-    gHistory = nsnull;
     nsCRT::free((char *) gBinDir);
     gBinDir = nsnull;
 }
